Fix icon alignment

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -16,7 +16,6 @@
 			padding: 2px 5px;
 			margin: 0 -5px;
 			border-radius: 4px;
-			align-items: center;
 
 			svg {
 				margin-left: 8px;
